# mtg-print

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: pr.yml  version-bump.yml
mtg_print/: .decklist.py.swp  .models.py.swp  .scryfall.py.swp  .sheet.py.swp  archidekt.py  cache.py  cli.py  decklist.py  models.py  scryfall.py  sheet.py  terminal.py
tests/: test_e2e.py  test_scryfall.py  test_sheet.py
tests/fixtures/: legacy.txt
