[project]
name = "mtg-print"
version = "0.1.0"
description = "CLI tool for printing MTG proxy sheets from decklists"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.9",
    "httpx>=0.27",
    "reportlab>=4.0",
    "pillow>=10.0",
    "tomli-w>=1.0",
]

[project.scripts]
mtg-print = "mtg_print.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=8.0",
    "pytest-httpx>=0.30",
    "ruff>=0.1",
    "ty>=0.0.1a0",
]
